# Kotel-

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  calculations.py  main.py
app/static/: index.html
kotel/: README.md  main.py  requirements.txt  settings.json
kotel/data/reference/: fuels.json  q5_nominal.json
kotel/docs/: api.md  architecture.md  data.md  formulas.md  generate_pdf.py  plugins.md  user-guide.md
kotel/plugins/steam_quality/: manifest.json  plugin.py
kotel/src/core/: __init__.py  heat_balance.py  models.py  notation.py  steam.py  tables.py
kotel/src/data/: __init__.py  providers.py
kotel/src/plugins/: __init__.py  base.py  registry.py
kotel/src/ui/: __init__.py  app.py  logo.py  notation.py  settings_store.py  settings_window.py  theme.py  widgets.py  win32_fix.py
tests/: test_api.py  test_calculations.py
