[project]
name = "kotel"
version = "0.1.0"
description = "Тепловой расчёт котлов — boiler thermal calculation web app"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
